--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Research</title>
+    <title>Portfolio</title>
     <link rel="icon" href="../img/brain-solid.svg" type="image/x-icon">
 
     <meta charset="UTF-8">
-    <meta name="description" content="Research by David Matthew Clark">
+    <meta name="description" content="Games made by David Matthew Clark">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="psychology, neuroscience, behaviour, behavior, research, statistics, analysis, data">
+    <meta name="keywords" content="game development, programming, games, video games">
     <meta name="author" content="David Matthew Clark">
 
     <link rel="stylesheet" href="../style.css">
@@ -19,10 +19,10 @@
     <script src="https://kit.fontawesome.com/a2a4f3a1ac.js" crossorigin="anonymous"></script>
 </head>
 <body>
-
     <!--
         MAIN NAVIGATION BAR
     -->
+
     <div class="flex-container-row nav main-nav">
         <button id="home-button" class="nav-button flex-box-row" title="Return to the start">
             <a href="../index.html" class="flex-box-row">
@@ -39,14 +39,14 @@
         </button>
                 
         <button id="research-paper" class="nav-button flex-box-row" title="My research experience">
-            <a href="research.html" class="flex-box-row">
+            <a href="../research/research.html" class="flex-box-row">
                 <i class="fa-solid fa-book-open-reader"></i> 
                 <div class="nav-text">Research</div>
             </a>
         </button>
 
         <button id="portfolio-button" class="nav-button flex-box-row" title="My game development experience">
-            <a href="../portfolio/portfolio.html" class="flex-box-row">
+            <a href="portfolio.html" class="flex-box-row">
                 <i class="fa-solid fa-gamepad"></i>
                 <div class="nav-text">Portfolio</div>
             </a>
@@ -69,19 +69,19 @@
             <i id="top-button-icon" class="fa-solid fa-arrows-up-to-line"></i>
         </button>
         
-        <button id="psychology-button" class="nav-button flex-box-row" title="My research in psychology">
-            <i class="fa-solid fa-brain"></i>
-            <div class="nav-text">Psychology</div>
+        <button id="complete-button" class="nav-button flex-box-row" title="Projects I have completed">
+            <i class="fa-solid fa-award"></i>
+            <div class="nav-text">Complete</div>
         </button>
 
-        <button id="neuroscience-button" class="nav-button flex-box-row" title="My research in neuroscience">
-            <i class="fa-solid fa-bolt"></i>
-            <div class="nav-text">Neuroscience</div>
+        <button id="current-button" class="nav-button flex-box-row" title="Projects I am currently working on">
+            <i class="fa-solid fa-screwdriver-wrench"></i>
+            <div class="nav-text">Current</div>
         </button>     
 
-        <button id="behaviour-button" class="nav-button flex-box-row" title="My research on behaviour">
-            <i class="fa-solid fa-person-walking"></i>
-            <div class="nav-text">Behaviour</div>
+        <button id="assets-button" class="nav-button flex-box-row" title="Assets I have developed">
+            <i class="fa-solid fa-robot"></i>
+            <div class="nav-text">Assets</div>
         </button>
 
         <button id="drop-down-button" class="nav-button flex-box-row" title="Drop-down menu">
@@ -89,7 +89,35 @@
         </button>
     </div>
 
-    <h1 id="psychology" class="section-title">Psychology</h1>
+    <h1 id="complete" class="section-title">Completed Projects</h1>
+    <div class="flex-container-row portfolio-container">
+        <a href="projects/allegory/allegory.html" class="portfolio-box">
+            <img src="projects/allegory/img/Allegory_of_the_tomb_cover.png" alt="Picture of the Allegory of the Tomb" title="Allegory of the Tomb">
+            <div class="portfolio-box-context">
+                <h2 class="title">Allegory of the Tomb</h2>
+                <div class="desc">A horror puzzle game</div>
+                <div class="date">October 2024</div>
+            </div>
+        </a>
+
+        <div class="portfolio-box">
+
+        </div>
+
+        <div class="portfolio-box">
+
+        </div>
+
+        <div class="portfolio-box">
+
+        </div>
+
+        <div class="portfolio-box">
+
+        </div>
+    </div>
+
+    <h1 id="current" class="section-title">Current Projects</h1>
     <div class="flex-container-row portfolio-container">
         <div class="portfolio-box">
 
@@ -112,30 +140,7 @@
         </div>
     </div>
 
-    <h1 id="neuroscience" class="section-title">Neuroscience</h1>
-    <div class="flex-container-row portfolio-container">
-        <div class="portfolio-box">
-
-        </div>
-
-        <div class="portfolio-box">
-
-        </div>
-
-        <div class="portfolio-box">
-
-        </div>
-
-        <div class="portfolio-box">
-
-        </div>
-
-        <div class="portfolio-box">
-
-        </div>
-    </div>
-
-    <h1 id="behaviour" class="section-title">Behaviour</h1>
+    <h1 id="assets" class="section-title">Assets</h1>
     <div class="flex-container-row portfolio-container last-element">
         <div class="portfolio-box">
 
@@ -181,8 +186,7 @@
         </div>
     </div>
 
-    <script src="scripts/researchNavBar.js"></script>
+    <script src="scripts/portNavBar.js"></script>
     <script src="../scripts/navBar.js"></script>
-
 </body>
 </html>
