Testing Godot HTML game

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -100,9 +100,14 @@
             </div>
         </a>
 
-        <div class="portfolio-box">
-
-        </div>
+        <a href="projects/first2D/game/first-2d-game.html" class="portfolio-box">
+            <img src="projects/allegory/img/Allegory_of_the_tomb_cover.png" alt="Picture of the Allegory of the Tomb" title="Allegory of the Tomb">
+            <div class="portfolio-box-context">
+                <h2 class="title">Creep Dodge</h2>
+                <div class="desc">My first 2D game!</div>
+                <div class="date">October 2024</div>
+            </div>
+        </a>
 
         <div class="portfolio-box">
 
