--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -92,7 +92,7 @@
     <h1 id="complete" class="section-title">Completed Projects</h1>
     <div class="flex-container-row portfolio-container">
         <a href="projects/allegory/allegory.html" class="portfolio-box">
-            <img src="projects/allegory/img/Allegory_of_the_tomb_cover.png" alt="Picture of the Allegory of the Tomb" title="Allegory of the Tomb">
+            <img style="transform: translate(0, -10px);" src="projects/allegory/img/Allegory_of_the_tomb_cover.png" alt="Picture of the Allegory of the Tomb" title="Allegory of the Tomb">
             <div class="portfolio-box-context">
                 <h2 class="title">Allegory of the Tomb</h2>
                 <div class="desc">A horror puzzle game</div>
@@ -100,12 +100,21 @@
             </div>
         </a>
 
-        <a href="projects/first2D/game/first-2d-game.html" class="portfolio-box">
-            <img src="projects/allegory/img/Allegory_of_the_tomb_cover.png" alt="Picture of the Allegory of the Tomb" title="Allegory of the Tomb">
+        <a href="projects/first3D/first3d.html" class="portfolio-box">
+            <img style="transform: translate(10px, 50px); scale: 2.0" src="projects/first3D/img/cover.jpg" alt="Picture of the Allegory of the Tomb" title="Allegory of the Tomb">
+            <div class="portfolio-box-context">
+                <h2 class="title">Creep Stomp</h2>
+                <div class="desc">My first 3D game!</div>
+                <div class="date">May 2024</div>
+            </div>
+        </a>
+
+        <a href="projects/first2D/first2d.html" class="portfolio-box">
+            <img style="transform: translate(30px, 30px);" src="projects/first2D/img/cover.jpg" alt="Picture of the Allegory of the Tomb" title="Allegory of the Tomb">
             <div class="portfolio-box-context">
                 <h2 class="title">Creep Dodge</h2>
                 <div class="desc">My first 2D game!</div>
-                <div class="date">October 2024</div>
+                <div class="date">May 2024</div>
             </div>
         </a>
 
